# SCU-23-3-database-Project

Database/: Cargo.toml  README.md  database.txt
Database/cmd/demo/: main.rs
Database/cmd/seed_admin/: main.rs
Database/cmd/server/: main.rs
Database/data/: app.db
Database/src/: auth.rs  lib.rs  models.rs  server.rs
Database/src/api/: mod.rs
Database/src/db/: mod.rs
Database/src/index/: mod.rs
Database/src/storage/: wal.rs
Database/src/txn/: mod.rs
Database/tests/: basic.rs
Database/web/: admin.html  app.js  auth.html  index.html  leader.html  member.html  style.css
